Convert from List to Set for some handling of base collections. run time down from 53s to 19s for 25k NPrime 3-reduction.